--- a/src/app/pages/tabs/tabs.page.scss
+++ b/src/app/pages/tabs/tabs.page.scss
@@ -12,3 +12,11 @@ ion-tab-bar {
     display: flex;
     justify-content: center;
 }
+
+.profile-pic-avatar {
+    padding: 0em;
+    margin: 0em;
+    height: 32px;
+    width: 32px;
+    border: 1px solid var(--ion-color-dark);
+}
