--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,7 +1,7 @@
 <ion-header mode="md" class="ion-no-border">
   <ion-toolbar color="light">
-      <ion-title>
-        {{profileData.username}}
+      <ion-title class="username-toolbar">
+        <strong>{{profileData.username}}</strong>
       </ion-title>
       <ion-icon (click)="openMenu()" class="menu-button" slot="end" name="menu"></ion-icon>
   </ion-toolbar>
@@ -12,23 +12,24 @@
     <div *ngIf="!editAccess" class="top-of-profile-edit">
       <div class="left-top-profile">
         <ion-avatar *ngIf="!profilePhoto">
-          <img src="../../../assets/avatar.svg">
+          <ion-img src="../../../assets/avatar.svg"></ion-img>
         </ion-avatar>
         <ion-avatar *ngIf="profilePhoto">
-          <img [src]="profilePhoto">
+          <ion-img [src]="profilePhoto"></ion-img>
         </ion-avatar>
         <div class="name-info">
           <p class="fullname" *ngIf="profileData.first_name && profileData.last_name">
             {{profileData.first_name}}&nbsp;{{profileData.last_name}}</p>
           <p class="fullname" *ngIf="!profileData.first_name || !profileData.last_name">{{profileData.username}}</p>
         </div>
-        <div>
-          <p class="relation">({{profileData.relation}})</p>
+        <div class="relationship-div">
+          <ion-icon *ngIf="admin" src="../../../assets/streamline/star-1.svg" class="star"></ion-icon>
+          <p class="relation">{{profileData.relation}}</p>
         </div>
       </div>
       <div class="right-top-profile-wrapper">
         <div class="birthday-div">
-          <ion-icon class="birthday-icon" src="../../../assets/streamline/cake-birthday.svg"></ion-icon>&nbsp;&nbsp;
+          <ion-icon class="birthday-icon" src="../../../assets/streamline/cake.svg"></ion-icon>&nbsp;&nbsp;
           <p class="birthday"><strong>{{profileData.birthday | date: 'MMMM d'}}{{(profileData.birthday | date: 'd') |
               dateSuffix}}</strong></p>
           <div>
@@ -62,13 +63,14 @@
           <p class="fullname" *ngIf="profileData.first_name && profileData.last_name">{{profileData.first_name}}&nbsp;{{profileData.last_name}}</p>
           <p class="fullname" *ngIf="!profileData.first_name || !profileData.last_name">{{profileData.username}}</p>
         </div>
-        <div>
-          <p class="relation">({{profileData.relation}})</p>
+        <div class="relationship-div">
+          <ion-icon *ngIf="admin" src="../../../assets/streamline/star-1.svg" class="star"></ion-icon>
+          <p class="relation">{{profileData.relation}}</p>
         </div>
       </div>
       <div class="right-top-profile-wrapper">
         <div class="birthday-div">
-          <div><ion-icon class="birthday-icon" src="../../../assets/streamline/cake-birthday.svg"></ion-icon></div>&nbsp;&nbsp;
+          <div><ion-icon class="birthday-icon" src="../../../assets/streamline/cake.svg"></ion-icon></div>&nbsp;&nbsp;
           <p class="birthday"><strong class="edit-birthday">{{profileData.birthday | date: 'MMMM d'}}{{(profileData.birthday | date: 'd') | dateSuffix}}</strong></p>
         </div>
         <div class="right-top-profile">
@@ -96,15 +98,6 @@
       <ion-segment-button value="video-uploads">
         <ion-icon name="videocam-outline"></ion-icon>
       </ion-segment-button>
-      <!-- <ion-segment-button value="recipes" disabled>
-        <ion-icon name="restaurant"></ion-icon>
-      </ion-segment-button>
-      <ion-segment-button value="cool-spots" disabled>
-        <ion-icon name="earth"></ion-icon>
-      </ion-segment-button>
-      <ion-segment-button value="notes" disabled>
-        <ion-icon name="chatbubbles"></ion-icon>
-      </ion-segment-button> -->
     </ion-segment>
   </ion-toolbar>
     <div class="no-photos" *ngIf="noPhotosYet && photosClicked">
@@ -112,9 +105,10 @@
     </div>
     <ion-grid class="postedphotos" *ngIf="!noPhotosYet && photosClicked">
       <ion-row class="postedphotos_row">
-        <ion-col *ngFor="let image of profileMediaData" size-lg="4" size-md="4" size-sm="4" size-xs="4">
-          <div (click)="openClickModal(image.id)" class="square" *ngIf="!image.deleted" style="background-image: url({{image.mediaSourceDesktop}})">
-          </div>
+        <ion-col *ngFor="let image of profileImageData" size-lg="4" size-md="4" size-sm="4" size-xs="4">
+            <div (click)="openClickModal(image.id)" class="square" *ngIf="!image.deleted && loaded" style="background-image: url({{image.base64}}); background-color: var(--ion-color-light)">
+            </div>
+            <ion-skeleton-text *ngIf="!loaded" animated style="width: 99.8%; margin: 0; background-position: center; object-fit: contain; aspect-ratio: 1;"></ion-skeleton-text>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -124,7 +118,7 @@
     <ion-grid class="postedvideos" *ngIf="!noVideosYet && videosClicked">
       <ion-row class="postedvideos_row">
         <ion-col *ngFor="let video of profileMediaData" size-lg="4" size-md="4" size-sm="4" size-xs="4">
-          <div (click)="openClickModal(video.id)" id="video-wrapper" class="square" *ngIf="!video.deleted" style="background-image: url({{video.posterImage}})">
+          <div (click)="openClickModal(video.id)" id="video-wrapper" class="square" *ngIf="!video.deleted" style="background-image: url({{video.posterImage}}); background-color: var(--ion-color-light)">
             <div id="play-controls">
               <ion-icon name="play-outline" large></ion-icon>
             </div>
