--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -29,7 +29,7 @@
       </div>
       <div class="right-top-profile-wrapper">
         <div class="birthday-div">
-          <ion-icon class="birthday-icon" src="../../../assets/streamline/cake.svg"></ion-icon>&nbsp;&nbsp;
+          <ion-icon class="birthday-icon" src="../../../assets/streamline/birthday-cake-1.svg"></ion-icon>&nbsp;&nbsp;
           <p class="birthday"><strong>{{profileData.birthday | date: 'MMMM d'}}{{(profileData.birthday | date: 'd') |
               dateSuffix}}</strong></p>
           <div>
@@ -70,7 +70,7 @@
       </div>
       <div class="right-top-profile-wrapper">
         <div class="birthday-div">
-          <div><ion-icon class="birthday-icon" src="../../../assets/streamline/cake.svg"></ion-icon></div>&nbsp;&nbsp;
+          <div><ion-icon class="birthday-icon" src="../../../assets/streamline/birthday-cake-1.svg"></ion-icon></div>&nbsp;&nbsp;
           <p class="birthday"><strong class="edit-birthday">{{profileData.birthday | date: 'MMMM d'}}{{(profileData.birthday | date: 'd') | dateSuffix}}</strong></p>
         </div>
         <div class="right-top-profile">
