--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -2,18 +2,18 @@
   <ion-tab-bar class="footer-scroll" slot="bottom">
     <ion-tab-button (click)="homeClick()" tab="home">
       <!-- <ion-icon *ngIf="!homeclick" name="home-outline"></ion-icon> -->
-      <ion-icon *ngIf="!homeclick" src="../../../assets/streamline/interface-home-3.svg"></ion-icon>Home
+      <ion-icon *ngIf="!homeclick" src="../../../assets/streamline/interface-home-3.svg"></ion-icon><small>Home</small>
       <ion-icon *ngIf="homeclick" src="../../../assets/streamline/home-4.svg"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button (click)="timelineClick()" tab="timeline">
       <!-- <ion-icon *ngIf="!timelineclick" name="image-outline"></ion-icon> -->
-      <ion-icon *ngIf="!timelineclick" src="../../../assets/streamline/image-photo-polaroid.svg"></ion-icon>FA Timeline
+      <ion-icon *ngIf="!timelineclick" src="../../../assets/streamline/image-photo-polaroid.svg"></ion-icon><small>Timeline</small>
       <ion-icon *ngIf="timelineclick" src="../../../assets/streamline/polaroid.svg"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button (click)="messageClick()" tab="message-board">
-      <ion-icon *ngIf="!messageclick" src="../../../assets/streamline/imessage.svg"></ion-icon>Bulletin
+      <ion-icon *ngIf="!messageclick" src="../../../assets/streamline/imessage.svg"></ion-icon><small>Bulletin</small>
       <ion-icon *ngIf="messageclick" src="../../../assets/streamline/imessage_fill.svg"></ion-icon>
     </ion-tab-button>
 
@@ -24,7 +24,7 @@
       <ion-avatar class="profile-pic-avatar">
         <img *ngIf="hasProfilePic" [src]="profilePicture" />
         <img *ngIf="!hasProfilePic" src="../../../assets/profile_placeholder_avatar.png" />
-      </ion-avatar><small>{{username}}</small>
+      </ion-avatar><small>Profile</small>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
