--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -15,6 +15,15 @@ ion-refresher.refresher-active {
     z-index: 5;
 }
 
+ion-infinite-scroll {
+    display: flex;
+    justify-content: center;
+    padding: 1em 0em 0em 0em;
+    z-index: 25 !important;
+}
+
+
+
 
 #video-container {
     position: relative;
@@ -35,6 +44,7 @@ ion-refresher.refresher-active {
         padding: 0;
         width: 100vw;
         height: 500px;
+        background-color: var(--ion-color-light);
     }
 
     .video-background {
