--- a/src/app/pages/message-board/message-board.page.html
+++ b/src/app/pages/message-board/message-board.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar mode="ios">
     <ion-title>
-      Message Board
+      Family Posts
     </ion-title>
   </ion-toolbar>
 </ion-header>
