--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -13,7 +13,7 @@
     </ion-tab-button>
 
     <ion-tab-button (click)="messageClick()" tab="message-board">
-      <ion-icon *ngIf="!messageclick" src="../../../assets/streamline/imessage.svg"></ion-icon><small>Bulletin</small>
+      <ion-icon *ngIf="!messageclick" src="../../../assets/streamline/imessage.svg"></ion-icon><small>Family Posts</small>
       <ion-icon *ngIf="messageclick" src="../../../assets/streamline/imessage_fill.svg"></ion-icon>
     </ion-tab-button>
 
