--- a/src/app/pages/timeline/timeline.page.html
+++ b/src/app/pages/timeline/timeline.page.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border" mode="md">
   <ion-toolbar color="light">
       <ion-title text-left>
-        Feta
+        Timeline
       </ion-title>
       <ion-tab-button (click)="createPhotoModal()" class="button-div" slot="end">
         <ion-icon src="../../../assets/streamline/interface-add-square.svg"></ion-icon>
