--- a/src/app/pages/tabs/tabs.page.scss
+++ b/src/app/pages/tabs/tabs.page.scss
@@ -16,7 +16,11 @@ ion-tab-bar {
 .profile-pic-avatar {
     padding: 0em;
     margin: 0em;
-    height: 32px;
-    width: 32px;
-    border: 1px solid var(--ion-color-dark);
+    height: 28px;
+    width: 28px;
+}
+
+small {
+    margin-top: 0.15em;
+    font-size: 100%;
 }
