more work on sports service

--- a/src/app/pages/message-board/message-board.page.html
+++ b/src/app/pages/message-board/message-board.page.html
@@ -14,7 +14,7 @@
     <ion-card-header>
       <div class="last-updated">
         <ion-chip color="warning">Sports</ion-chip>
-        <ion-text color="medium">Last updated at {{game.lastUpdate | date: 'h:mma' }} EST</ion-text>
+        <ion-text color="medium">Last updated at {{game.lastUpdate }} EST</ion-text>
       </div>
       <div class="sports-banner">
         <div class="sports-teams">
