--- a/src/app/pages/message-board/message-board.page.scss
+++ b/src/app/pages/message-board/message-board.page.scss
@@ -115,3 +115,12 @@ ion-title {
     margin: 0 1em 1em 1em;
     max-width: 450px;
 }
+
+.live-description {
+    font-size: 0.85;
+}
+
+.live-game-banner {
+    display: flex;
+    flex-direction: row;
+}
